--- a/static/css/scrolling-nav.css
+++ b/static/css/scrolling-nav.css
@@ -3,7 +3,12 @@
  * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-scrolling-nav/blob/master/LICENSE)
  */
-
+ background-color- green
+#Doggo{
+    width: 25%;
+    height: 25%;
+    center;
+}
 header {
   padding: 154px 0 100px;
 }
