--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,9 @@
     <meta name="author" content="">
 
     <title>Scrolling Nav - Start Bootstrap Template</title>
-
+        <div class="col-6" id="Doggo">
+            <img  class="img-fluid mb-5 d-block mx-auto" src="https://i.pinimg.com/originals/22/d1/c6/22d1c6c7ead6e2abb9491ca608d5c91d.jpg" alt="happy-Doggo">
+        </div>
     <!-- Bootstrap core CSS -->
     <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -45,8 +47,8 @@
 
     <header class="bg-primary text-white">
       <div class="container text-center">
-        <h1>Welcome to Scrolling Nav</h1>
-        <p class="lead">A landing page template freshly redesigned for Bootstrap 4</p>
+        <h1>Cute Dogs</h1>
+        <p class="lead">A website to look at cute dogs uwu</p>
       </div>
     </header>
 
