--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
     <title>Scrolling Nav - Start Bootstrap Template</title>
         <div class="col-6" id="Doggo">
-            <img  class="img-fluid mb-5 d-block mx-auto" src="https://i.pinimg.com/originals/22/d1/c6/22d1c6c7ead6e2abb9491ca608d5c91d.jpg" alt="happy-Doggo">
+            <img id="Dog" src=https://dogstockphotos.files.wordpress.com/2010/10/mixed-breed-puppy-with-muddy-nose-stock-photo1.jpg alt=Pretty_Dog class="center">
         </div>
     <!-- Bootstrap core CSS -->
     <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -47,8 +47,8 @@
 
     <header class="bg-primary text-white">
       <div class="container text-center">
-        <h1>Cute Dogs</h1>
-        <p class="lead">A website to look at cute dogs uwu</p>
+        <h1>Dogs are Perfect</h1>
+        <p class="lead">Why are dogs so perfect? uwu</p>
       </div>
     </header>
 
@@ -56,14 +56,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>About this page</h2>
-            <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
-            <ul>
-              <li>Clickable nav links that smooth scroll to page sections</li>
-              <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-              <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-              <li>Minimal custom CSS so you are free to explore your own unique design options</li>
-            </ul>
+            <h2>Reason 1: They are loyal</h2>
+            <p class="lead"> Dogs stay loyal unlike humans.</p>
           </div>
         </div>
       </div>
@@ -73,8 +67,13 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Services we offer</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+            <h2>Reason 2: They make us happy</h2>
+             <img class= "mb-5 mt-5" src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4kX5Zc_H2V7iT4l84vy5soHC01-_NCbAuZRKatD0eZoqsT95Nmw alt="WindowDoggy">
+                 <ul>
+                    <li>Dogs make us laugh when they do silly things</li>
+                    <li>Dogs are there for us when we are feeling sad</li>
+                     <li>They keep us from feeling lonely</li>
+                </ul>
           </div>
         </div>
       </div>
@@ -84,8 +83,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Contact us</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+            <h2>Reason #: THEY ARE SO CUTE</h2>
+            <p class="lead">All dogs are so cute that no body can resist petting them...except if you're allergic</p>
           </div>
         </div>
       </div>
